// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Filter: <ApplyButton /> should handle clicks 1`] = `
<SurroundPortals
  portalName="filter.apply-button"
  portalProps={
    {
      "disabled": false,
      "onClick": [MockFunction],
      "widgetSettings": {},
    }
  }
>
  <div
    className={
      {
        "data-css-1cqgl9p": "",
      }
    }
  >
    <Button
      className="css-1x58v7w"
      disabled={false}
      flat={true}
      onClick={[MockFunction]}
      testId="applyFilterButton"
      type="primary"
    >
      <Text
        string="filter.apply"
        style={
          {
            "color": undefined,
          }
        }
      />
    </Button>
  </div>
</SurroundPortals>
`;

exports[`Filter: <ApplyButton /> should render as activated 1`] = `
<SurroundPortals
  portalName="filter.apply-button"
  portalProps={
    {
      "disabled": false,
      "onClick": [Function],
      "widgetSettings": {},
    }
  }
>
  <div
    className={
      {
        "data-css-1cqgl9p": "",
      }
    }
  >
    <Button
      className="css-1x58v7w"
      disabled={false}
      flat={true}
      onClick={[Function]}
      testId="applyFilterButton"
      type="primary"
    >
      <Text
        string="filter.apply"
        style={
          {
            "color": undefined,
          }
        }
      />
    </Button>
  </div>
</SurroundPortals>
`;

exports[`Filter: <ApplyButton /> should render as deactivated 1`] = `
<SurroundPortals
  portalName="filter.apply-button"
  portalProps={
    {
      "disabled": true,
      "onClick": [Function],
      "widgetSettings": {},
    }
  }
>
  <div
    className={
      {
        "data-css-1cqgl9p": "",
      }
    }
  >
    <Button
      className="css-1x58v7w"
      disabled={true}
      flat={true}
      onClick={[Function]}
      testId="applyFilterButton"
      type="primary"
    >
      <Text
        string="filter.apply"
        style={
          {
            "color": undefined,
          }
        }
      />
    </Button>
  </div>
</SurroundPortals>
`;
